# library-organizer-cli

./: .gitignore  README.md  entry.py  library-organizer-cli.spec  pyproject.toml  requirements.txt  version_info.txt
scripts/: build.sh  build_with_docker.sh  bump_version.sh  initialize.sh
src/library_organizer_cli/: cli.py  compare.py  constants.py  duplicate.py  extractor.py  ignore_config.py  main.py  media_discovery.py  pipeline.py  progress.py  renamer.py  scan.py  sync.py
tests/: test_ignore_config.py  test_media_discovery.py  test_pipeline.py
