[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-organizer-cli"
dynamic = ["version"]
description = "Organize image/video libraries, detect duplicates, and sync between folders."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exifread==3.5.1",
    "xxhash==3.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.10",
    "ruff>=0.4",
]

[project.scripts]
library-organizer-cli = "library_organizer_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "library_organizer_cli.__version__" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

